# android_ndk_opengles

./: .gitignore  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/common/include/: esUtil.h
app/src/main/cpp/common/src/: esShader.cpp  esUtil.cpp  esUtil_Android.cpp
app/src/main/cpp/session/: chap2_hello_triangle.cpp  chap3.cpp
app/src/main/java/dai/android/ndk/opengle/es/: GlesNdkHelper.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
